--- a/index.css
+++ b/index.css
@@ -47,3 +47,16 @@ h1 {
 .green.click {
   cursor: pointer;
 }
+table th, table td {
+  text-align: left;
+  padding: 2px;
+}
+table tr {
+  border-bottom: 1px solid rgba(29, 111, 66, 0.28);
+}
+table tr:nth-child(2n) {
+  background-color: rgba(29, 111, 66, 0.28);;
+}
+table tr:nth-child(2n + 1) {
+  background-color: rgba(29, 111, 66, 0.5);;
+}
