--- a/index.css
+++ b/index.css
@@ -60,3 +60,10 @@ table tr:nth-child(2n) {
 table tr:nth-child(2n + 1) {
   background-color: rgba(29, 111, 66, 0.5);;
 }
+/* 
+table tr td.Color {
+  color: yellow;
+}
+table tr td.Quantity {
+  color: brown;
+} */
